Fix spacing of header in about and project page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,53 +1,3 @@
 .App {
   font-family: "Oswald", sans-serif;
 }
-
-.header {
-  height: 13vh;
-  background-color: lightpink;
-  position: absolute;
-
-  .header__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: lightblue;
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-
-    .header__title {
-      font-family: "Open Sans", sans-serif;
-      font-size: 1.5em;
-      letter-spacing: 0.6rem;
-      font-weight: 800;
-      text-transform: uppercase;
-      margin: 1vh;
-      line-height: 0.8em;
-      color: black;
-      text-decoration: none;
-      background-color: lightcoral;
-    }
-  }
-}
-
-.hamburger {
-  position: absolute;
-  direction: rtl;
-  right: 10vw;
-  background-color: lightgreen;
-}
-.hamburger__line {
-  background-color: black;
-  width: 14px;
-  height: 2px;
-  margin: 2px 0;
-}
-
-.hamburger__line--2 {
-  width: 17px;
-}
-
-.hamburger__line--3 {
-  width: 10px;
-}
